<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".Forms">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="প্রয়োজনীয় ফরমসমূহ"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/f1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/red"
        android:text="@string/mrp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/f4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/red"
        android:text="@string/mrp_filled"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/f2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/red"
        android:text="@string/re_issue"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/f3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"
        android:background="@color/red"
        android:text="@string/extraform"
        android:textColor="@color/white" />

</LinearLayout>